# mind_school

./: .env.container  .env.local  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 42189ea47e64_init_db.py  82444e2e8ffc_update_table_pupil.py  e2cf6404802b_add_null.py
apps/: base_crud.py  constants.py  main.py
apps/core/: base.py  config.py  database.py  logger.py  test_user.py
apps/scores/: logger.py  models.py
apps/scores/api/: routers.py
apps/scores/api/endpoints/: score.py  subjects.py
apps/scores/crud/: score_crud.py  subject_crud.py
apps/scores/schemas/: scores.py  subjects.py
apps/scores/services/: scores.py  subjects.py
apps/telegram_bot/: logger.py  main.py
apps/users/: models.py  schemas.py  services.py  user_crud.py
apps/users/api/: register.py
tests/: test_api_score.py
