[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | build
  | dist
  | __pycache__
)/
'''


[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["apps", "tests", "app"]


[flake8]
max-line-length = 100

[project]
name = "mind-school"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita",email = "vomerff@gmail.com"}
]
readme = "README.md"
requires-python = ">3.12"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "anyio (>=4.11.0,<5.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-trio (>=0.8.0,<0.9.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.1.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
